[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.69.0",
    "fastapi>=0.118.0",
    "google-genai>=1.41.0",
    "langchain-core>=0.3.78",
    "langgraph>=0.6.8",
    "openai>=2.1.0",
    "pydantic>=2.11.10",
    "requests>=2.32.5",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
